@@ -29,6 +29,7 @@
 #include "memory.h"
 #include "pia.h"
 #include "sio.h"
+#include "pokey.h"
 #ifdef XEP80_EMULATION
 #include "xep80.h"
 #endif
@@ -45,6 +46,13 @@ UBYTE PIA_PORT_input[2];
 
 UBYTE PIA_PORTA_mask;
 UBYTE PIA_PORTB_mask;
+int PIA_CA2 = 1;
+int PIA_CA2_negpending = 0;
+int PIA_CA2_pospending = 0;
+int PIA_CB2 = 1;
+int PIA_CB2_negpending = 0;
+int PIA_CB2_pospending = 0;
+int PIA_IRQ = 0;
 
 int PIA_Initialise(int *argc, char *argv[])
 {
@@ -56,6 +64,8 @@ int PIA_Initialise(int *argc, char *argv[])
 	PIA_PORTB_mask = 0xff;
 	PIA_PORT_input[0] = 0xff;
 	PIA_PORT_input[1] = 0xff;
+	PIA_CA2 = 1; /* cassette motor line */
+	PIA_CB2 = 1; /* sio not command line */
 
 	return TRUE;
 }
@@ -69,20 +79,70 @@ void PIA_Reset(void)
 	PIA_PORTB = 0xff;
 }
 
+static void set_CA2(int value)
+{
+	/* This code is part of the cassette emulation */
+	if (PIA_CA2 != value) {
+		/* The motor status has changed */
+		SIO_TapeMotor(!value);
+	}
+	PIA_CA2 = value;
+}
+
+static void set_CB2(int value)
+{
+	/* This code is part of the serial I/O emulation */
+	if (PIA_CB2 != value) {
+		/* The command line status has changed */
+		SIO_SwitchCommandFrame(!value);
+	}
+	PIA_CB2 = value;
+}
+
+static void update_PIA_IRQ(void)
+{
+	PIA_IRQ = 0;
+	if (((PIA_PACTL & 0x40) && (PIA_PACTL & 0x28) == 0x08) || 
+		 ((PIA_PBCTL & 0x40) && (PIA_PBCTL & 0x28) == 0x08) ||
+		 ((PIA_PACTL & 0x80) && (PIA_PACTL & 0x01)) ||
+		 ((PIA_PBCTL & 0x80) && (PIA_PBCTL & 0x01))) {
+		PIA_IRQ = 1;
+	}
+	/* update pokey IRQ status */
+	POKEY_PutByte(POKEY_OFFSET_IRQEN, POKEY_IRQEN);
+}
+
 UBYTE PIA_GetByte(UWORD addr, int no_side_effects)
 {
 	switch (addr & 0x03) {
-	case PIA_OFFSET_PACTL:
-		return PIA_PACTL & 0x3f;
-	case PIA_OFFSET_PBCTL:
-		return PIA_PBCTL & 0x3f;
+	case PIA_OFFSET_PACTL: 
+		/* read CRA (control register A) */
+		return PIA_PACTL;
+	case PIA_OFFSET_PBCTL: 
+		/* read CRB (control register B) */
+		return PIA_PBCTL;
 	case PIA_OFFSET_PORTA:
 		if ((PIA_PACTL & 0x04) == 0) {
-			/* direction register */
+			/* read DDRA (data direction register A) */
 			return ~PIA_PORTA_mask;
 		}
 		else {
-			/* port state */
+			/* read PIBA (peripheral interface buffer A) */
+			/* also called ORA (output register A) even for reading in data sheet */
+			if (!no_side_effects) {
+				if (((PIA_PACTL & 0x38)>>3) == 0x04) { /* handshake */
+					if (PIA_CA2 == 1) {
+						PIA_CA2_negpending = 1;
+					}
+					set_CA2(0);
+				}
+				else if (((PIA_PACTL & 0x38)>>3) == 0x05) { /* pulse */
+					set_CA2(0);
+					set_CA2(1); /* FIXME one cycle later ... */
+				}
+				PIA_PACTL &= 0x3f; /* clear bit 6 & 7 */
+				update_PIA_IRQ();
+			}
 #ifdef XEP80_EMULATION
 			if (XEP80_enabled) {
 				return(XEP80_GetBit() & PIA_PORT_input[0] & (PIA_PORTA | PIA_PORTA_mask));
@@ -92,11 +152,16 @@ UBYTE PIA_GetByte(UWORD addr, int no_side_effects)
 		}
 	case PIA_OFFSET_PORTB:
 		if ((PIA_PBCTL & 0x04) == 0) {
-			/* direction register */
+			/* read DDRA (data direction register B) */
 			return ~PIA_PORTB_mask;
 		}
 		else {
-			/* port state */
+			/* read PIBB (peripheral interface buffer B) */
+			/* also called ORB (output register B) even for reading in data sheet */
+			if (!no_side_effects) {
+				PIA_PBCTL &= 0x3f; /* clear bit 6 & 7 */
+				update_PIA_IRQ();
+			}
 			if (!Atari800_machine_type != Atari800_MACHINE_XLXE) {
 				return PIA_PORTB | PIA_PORTB_mask;
 			}
@@ -112,28 +177,118 @@ UBYTE PIA_GetByte(UWORD addr, int no_side_effects)
 void PIA_PutByte(UWORD addr, UBYTE byte)
 {
 	switch (addr & 0x03) {
-	case PIA_OFFSET_PACTL:
-                /* This code is part of the cassette emulation */
-		/* The motor status has changed */
-		SIO_TapeMotor(byte & 0x08 ? 0 : 1);
+	case PIA_OFFSET_PACTL: 
+		/* write CRA (control register A) */
+		byte &= 0x3f; /* bits 6 & 7 cannot be written */
 	
-		PIA_PACTL = byte;
-		break;
-	case PIA_OFFSET_PBCTL:
-		/* This code is part of the serial I/O emulation */
-		if ((PIA_PBCTL ^ byte) & 0x08) {
-			/* The command line status has changed */
-			SIO_SwitchCommandFrame(byte & 0x08 ? 0 : 1);
+		PIA_PACTL = ((PIA_PACTL & 0xc0) | byte);
+		/* CA2 control */
+		switch((byte & 0x38)>>3) {
+			case 0: /* 000 input, negative transition, no irq*/
+			case 1: /* 001 input, negative transition, irq */
+				if (PIA_CA2_negpending) {
+					PIA_PACTL |= 0x40;
+				}
+				set_CA2(1);
+				PIA_CA2_negpending = 0;
+				PIA_CA2_pospending = 0;
+			break;
+			case 2: /* 010 input, positive transition, no irq */
+			case 3: /* 011 input, positive transition, irq */
+				if (!PIA_CA2 || PIA_CA2_pospending) {
+					PIA_PACTL |= 0x40;
+				}
+				set_CA2(1);
+				PIA_CA2_negpending = 0;
+				PIA_CA2_pospending = 0;
+			break;
+			case 4: /* 100 output, handshake mode */
+				PIA_CA2_pospending = 0;
+				PIA_PACTL &= 0x3f;
+			break;
+			case 5: /* 101 output, pulse mode */
+				set_CA2(1); /* FIXME after one cycle, if 0 */
+				PIA_PACTL &= 0x3f;
+				PIA_CA2_negpending = 0;
+				PIA_CA2_pospending = 0;
+			break;
+			case 6: /* 110 output low */
+				set_CA2(0);
+				PIA_PACTL &= 0x3f;
+				PIA_CA2_negpending = 0;
+				PIA_CA2_pospending = 0;
+			break;
+			case 7: /* 111 output high */
+				PIA_PACTL &= 0x3f;
+				if (!PIA_CA2_negpending && PIA_CA2 == 0) {
+					PIA_CA2_pospending = 1;
+				}
+				set_CA2(1);
+				PIA_CA2_negpending = 0;
+			break;
 		}
-		PIA_PBCTL = byte;
+		update_PIA_IRQ();
+		break;
+	case PIA_OFFSET_PBCTL: 
+		/* write CRB (control register B) */
+		byte &= 0x3f; /* bits 6 & 7 cannot be written */
+		PIA_PBCTL = ((PIA_PBCTL & 0xc0) | byte);
+		/* CB2 control */
+		switch((byte & 0x38)>>3) {
+			case 0: /* 000 input, negative transition, no irq*/
+			case 1: /* 001 input, negative transition, irq */
+				/* PACTL has: if (PIA_CB2_negpending) */
+				if (PIA_CB2_negpending || PIA_CB2_pospending) {
+					PIA_PBCTL |= 0x40;
+				}
+				set_CB2(1);
+				PIA_CB2_negpending = 0;
+				PIA_CB2_pospending = 0;
+			break;
+			case 2: /* 010 input, positive transition, no irq */
+			case 3: /* 011 input, positive transition, irq */
+				if (!PIA_CB2 || PIA_CB2_pospending) {
+					PIA_PBCTL |= 0x40;
+				}
+				set_CB2(1);
+				PIA_CB2_negpending = 0;
+				PIA_CB2_pospending = 0;
+			break;
+			case 4: /* 100 output, handshake mode */
+				PIA_CB2_pospending = 0;
+				PIA_PBCTL &= 0x3f;
+			break;
+			case 5: /* 101 output, pulse mode */
+				set_CB2(1); /* FIXME after one cycle, if 0 */
+				PIA_PBCTL &= 0x3f;
+				PIA_CB2_negpending = 0;
+				PIA_CB2_pospending = 0;
+			break;
+			case 6: /* 110 output low */
+				set_CB2(0);
+				PIA_PBCTL &= 0x3f;
+				PIA_CB2_negpending = 0;
+				PIA_CB2_pospending = 0;
+			break;
+			case 7: /* 111 output high */
+				PIA_PBCTL &= 0x3f;
+				/* PACTL has: if (!PIA_CB2_negpending && PIA_CB2 == 0) */
+				if (PIA_CB2 == 0) {
+					PIA_CB2_pospending = 1;
+				}
+				set_CB2(1);
+				PIA_CB2_negpending = 0;
+			break;
+		}
+		update_PIA_IRQ();
 		break;
 	case PIA_OFFSET_PORTA:
 		if ((PIA_PACTL & 0x04) == 0) {
-			/* set direction register */
+			/* write DDRA (data direction register A) */
  			PIA_PORTA_mask = ~byte;
 		}
 		else {
-			/* set output register */
+			/* write ORA (output register A) */
 #ifdef XEP80_EMULATION
 			if (XEP80_enabled && (~PIA_PORTA_mask & 0x11)) {
 				XEP80_PutBit(byte);
@@ -146,27 +301,29 @@ void PIA_PutByte(UWORD addr, UBYTE byte)
 #endif
 		break;
 	case PIA_OFFSET_PORTB:
-		if (Atari800_machine_type == Atari800_MACHINE_XLXE) {
-			if ((PIA_PBCTL & 0x04) == 0) {
-				/* direction register */
+		if ((PIA_PBCTL & 0x04) == 0) {
+			/* write DDRB (data direction register B) */
+			if (Atari800_machine_type == Atari800_MACHINE_XLXE) {
 				MEMORY_HandlePORTB((UBYTE) (PIA_PORTB | ~byte), (UBYTE) (PIA_PORTB | PIA_PORTB_mask));
-				PIA_PORTB_mask = ~byte;
 			}
-			else {
-				/* output register */
-				MEMORY_HandlePORTB((UBYTE) (byte | PIA_PORTB_mask), (UBYTE) (PIA_PORTB | PIA_PORTB_mask));
-				PIA_PORTB = byte;
-			}
+			PIA_PORTB_mask = ~byte;
 		}
 		else {
-			if ((PIA_PBCTL & 0x04) == 0) {
-				/* direction register */
-				PIA_PORTB_mask = ~byte;
+			/* write ORB (output register B) */
+			if (((PIA_PBCTL & 0x38)>>3) == 0x04) { /* handshake */
+				if (PIA_CB2 == 1) {
+					PIA_CB2_negpending = 1;
+				}
+				set_CB2(0);
 			}
-			else {
-				/* output register */
-				PIA_PORTB = byte;
+			else if (((PIA_PBCTL & 0x38)>>3) == 0x05) { /* pulse */
+				set_CB2(0);
+				set_CB2(1); /* FIXME one cycle later ... */
 			}
+			if (Atari800_machine_type == Atari800_MACHINE_XLXE) {
+				MEMORY_HandlePORTB((UBYTE) (byte | PIA_PORTB_mask), (UBYTE) (PIA_PORTB | PIA_PORTB_mask));
+			}
+			PIA_PORTB = byte;
 		}
 		break;
 	}
@@ -183,18 +340,27 @@ void PIA_StateSave(void)
 
 	StateSav_SaveUBYTE( &PIA_PORTA_mask, 1 );
 	StateSav_SaveUBYTE( &PIA_PORTB_mask, 1 );
+	StateSav_SaveINT( &PIA_CA2, 1 );
+	StateSav_SaveINT( &PIA_CA2_negpending, 1 );
+	StateSav_SaveINT( &PIA_CA2_pospending, 1 );
+	StateSav_SaveINT( &PIA_CB2, 1 );
+	StateSav_SaveINT( &PIA_CB2_negpending, 1 );
+	StateSav_SaveINT( &PIA_CB2_pospending, 1 );
 }
 
 void PIA_StateRead(UBYTE version)
 {
 	UBYTE byte;
+	int temp;
 
-	StateSav_ReadUBYTE( &PIA_PACTL, 1 );
-	SIO_TapeMotor(PIA_PACTL & 0x08 ? 0 : 1);
 	StateSav_ReadUBYTE( &byte, 1 );
-	if ((PIA_PBCTL ^ byte) & 0x08) {
-		/* The command line status has changed. */
-		SIO_SwitchCommandFrame(byte & 0x08 ? 0 : 1);
+	if (version <= 7 ) {
+		PIA_PutByte(PIA_OFFSET_PACTL, byte); /* set PIA_CA2 and tape motor */
+	}
+	PIA_PACTL = byte;
+	StateSav_ReadUBYTE( &byte, 1 );
+	if (version <= 7 ) {
+		PIA_PutByte(PIA_OFFSET_PBCTL, byte); /* set PIA_CB2 and !command line */
 	}
 	PIA_PBCTL = byte;
 	StateSav_ReadUBYTE( &PIA_PORTA, 1 );
@@ -216,6 +382,18 @@ void PIA_StateRead(UBYTE version)
 
 	StateSav_ReadUBYTE( &PIA_PORTA_mask, 1 );
 	StateSav_ReadUBYTE( &PIA_PORTB_mask, 1 );
+
+	if (version >= 8) {
+		StateSav_ReadINT( &temp, 1 );
+		set_CA2(temp);
+		StateSav_ReadINT( &PIA_CA2_negpending, 1 );
+		StateSav_ReadINT( &PIA_CA2_pospending, 1 );
+		StateSav_ReadINT( &temp, 1 );
+		set_CB2(temp);
+		StateSav_ReadINT( &PIA_CB2_negpending, 1 );
+		StateSav_ReadINT( &PIA_CB2_pospending, 1 );
+		update_PIA_IRQ();
+	}
 }
 
 #endif /* BASIC */
